<resources>
    <string name="app_name">Wallpaper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="openNavDrawer" translatable="false">Navigation Drawer Open</string>
    <string name="closeNavDrawer" translatable="false">Navigation Drawer Close</string>
    <string name="brand">brand</string>
    <string name="note">(i) Download atleast 2 to 3 Wallpaper before starting auto wallpaper changer.
                        \n(ii) To stop auto changer simply apply any normal wallpaper from Litwallz
                        \n(iii) To delete wallpaper, long press on wallpaper and click delete.

    </string>
    <string name="note1">(i) Click to select.</string>
    <string name="note2">(ii) Click again to unselect.</string>
    <string name="note3">(iii) Long click to delete.</string>
    <string name="note_2">This feature is currently is beta, so you many encounter some issues.
        \nIf you find any issue or bugs, please report them through "Contact Us" from Menu
    </string>
    <string name="preferences_key">preferences</string>

    <string name="preferences_folder_key">folder</string>
    <string name="preferences_folder_title">Folder</string>
    <string name="preferences_folder_summary">Folder containing photos to use in slideshow</string>
    <string name="preferences_folder_default">/storage/emulated/0/Android/data/com.example.nvhuy.wallpaper/files/autoChange/</string>
    <string-array name="preferences_folder_entries" />
    <string-array name="preferences_folder_values" />

    <string name="preferences_duration_key">duration</string>
    <string name="preferences_duration_title">Duration</string>
    <string name="preferences_duration_summary">Duration to display each photo</string>
    <string name="preferences_duration_default">60000</string>
    <string name="preferences_random_key">random</string>
    <string name="preferences_random_title">Random</string>
    <string name="preferences_random_summary">Display photos in random order instead of sequentially</string>
    <string name="preferences_random_default">true</string>

    <string name="preferences_rotate_key">rotate</string>
    <string name="preferences_rotate_title">Do not rotate</string>
    <string name="preferences_rotate_summary">Keep original screen orientation of photos</string>
    <string name="preferences_rotate_default">false</string>

    <string name="preferences_fit_in_screen_key">fit_in_screen</string>
    <string name="preferences_fit_in_screen_title">Fit in screen</string>
    <string name="preferences_fit_in_screen_summary">Fit photos in the screen instead of filling the screen</string>
    <string name="preferences_fit_in_screen_default">false</string>

    <string name="preferences_scroll_key">scroll</string>
    <string name="preferences_scroll_title">Scroll wallpaper</string>
    <string name="preferences_scroll_summary">Scroll wallpaper when changing home screens</string>
    <string name="preferences_scroll_default">false</string>

    <string name="preferences_recurse_key">recurse</string>
    <string name="preferences_recurse_title">Recurse folder</string>
    <string name="preferences_recurse_summary">Include photos from sub-folders of selected folder</string>
    <string name="preferences_recurse_default">false</string>

    <string name="preferences_doubletap_key">doubletap</string>
    <string name="preferences_doubletap_title">Enable touch events</string>
    <string name="preferences_doubletap_summary">Double tap screen to skip to the next photo</string>
    <string name="preferences_doubletap_default">true</string>

    <string name="preferences_enlarge_key">enlarge</string>
    <string name="preferences_enlarge_title">Do not enlarge</string>
    <string name="preferences_enlarge_summary">Do not enlarge photos to fill screen</string>
    <string name="preferences_enlarge_default">false</string>

    <string name="preferences_screen_awake_key">screen_awake</string>
    <string name="preferences_screen_awake_title">Change on screen awake</string>
    <string name="preferences_screen_awake_summary">Change wallpaper each time the screen is turned on</string>
    <string name="preferences_screen_awake_default">false</string>
    <string name="settings_activity">Hamsi Wallpaper Slideshow Settings</string>
    <string name="no_photos_found_1">No photos found in selected folder, </string>
    <string name="no_photos_found_2">press Settings to select a folder or </string>
    <string name="no_photos_found_3">double tab on screen…</string>
    <string name="app_description">View your photos as slideshow on your home screen wallpaper at
        a defined interval</string>
    <string-array name="preferences_duration_entries">

        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
        <item>Manual</item>
    </string-array>
    <string-array name="preferences_duration_values">
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>21600000</item>
        <item>43200000</item>
        <item>86400000</item>
        <item>0</item>
    </string-array>
    <string name="title_activity_user">UserActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- module login
    -->
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_success">Change success.</string>
    <string name="change_failed">Change failed</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="phone_was_not_used">Phone number was not used.</string>
    <string name="invalid_phone">Invalid phone.</string>
    <string name="select_picture">Select picture</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="loading">Loading</string>
    <string name="password_or_phone_not_correct">Phone number or password was not correct.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="code_resent">Code resent.</string>
    <string name="code_sent">Code sent.</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="quote_exceeded">Quota exceeded</string>
    <string name="verify_wrong">Verify is wrong.</string>
    <string name="login_success">Login success.</string>
    <string name="phone_number_used">Phone number used.</string>
    <string name="invalid_infor">Invalid information.</string>
</resources>